force-app/main/default/objects/Asset_Cancellation__c/Asset_Cancellation__c.object-meta.xml
<CustomObject>
    <description>Individual Asset Cancellation and return of stock Item</description>
    <label>Asset Cancellation</label>
    <nameField>
        <displayFormat>ACN-{0000}</displayFormat>
        <label>Asset Cancellation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Cancellation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>