force-app/main/default/objects/Asset_Cancellation__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Cancellations</relationshipLabel>
    <relationshipName>Asset_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>