force-app/main/default/objects/Asset_Cancellation__c/fields/Person_In_Charge_Return__c.field-meta.xml
<CustomField>
    <fullName>Person_In_Charge_Return__c</fullName>
    <label>Person In Charge - Return</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>kim</fullName>
            </value>
            <value>
                <fullName>방윤승</fullName>
            </value>
            <value>
                <fullName>백효인</fullName>
            </value>
            <value>
                <fullName>서동주</fullName>
            </value>
            <value>
                <fullName>안희영</fullName>
            </value>
            <value>
                <fullName>이다빈</fullName>
            </value>
            <value>
                <fullName>차지원</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>