force-app/main/default/objects/Asset_Cancellation__c/fields/Return_Age__c.field-meta.xml
<CustomField>
    <fullName>Return_Age__c</fullName>
    <formula>TODAY() -  Return_Request_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Return Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>