force-app/main/default/objects/Asset_Cancellation__c/fields/Return_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Return_Request_Date__c</fullName>
    <label>Return Request Date</label>
    <type>Date</type>
</CustomField>