force-app/main/default/objects/Asset_Cancellation__c/fields/Return_Shipping_Company__c.field-meta.xml
<CustomField>
    <fullName>Return_Shipping_Company__c</fullName>
    <label>Return Shipping Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUS Post</fullName>
            </value>
            <value>
                <fullName>DH Staff</fullName>
            </value>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>Fastway</fullName>
            </value>
            <value>
                <fullName>epost</fullName>
            </value>
            <value>
                <fullName>Cvsnet</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>