force-app/main/default/objects/Asset_Cancellation__c/fields/Return_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking_Number__c</fullName>
    <label>Return Tracking Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>