force-app/main/default/objects/Asset_Cancellation__c/fields/Returned_Reason__c.field-meta.xml
<CustomField>
    <fullName>Returned_Reason__c</fullName>
    <label>Returned Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Contract canceled</fullName>
            </value>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Deliver refused</fullName>
            </value>
            <value>
                <fullName>Delivery refused</fullName>
            </value>
            <value>
                <fullName>Didn&apos;t pick up</fullName>
            </value>
            <value>
                <fullName>Exchanged</fullName>
            </value>
            <value>
                <fullName>Fee burden</fullName>
            </value>
            <value>
                <fullName>Inconvenient to use</fullName>
            </value>
            <value>
                <fullName>No space for Terminal</fullName>
            </value>
            <value>
                <fullName>Not enough order</fullName>
            </value>
            <value>
                <fullName>Rejection with no reason</fullName>
            </value>
            <value>
                <fullName>Returned by restaurant</fullName>
            </value>
            <value>
                <fullName>Returned by the restaurant</fullName>
            </value>
            <value>
                <fullName>System error</fullName>
            </value>
            <value>
                <fullName>Use POS</fullName>
            </value>
            <value>
                <fullName>Wrong recipients</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>