force-app/main/default/objects/Asset_Cancellation__c/fields/Returning_Stock_Item__c.field-meta.xml
<CustomField>
    <fullName>Returning_Stock_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Returning Stock Item</label>
    <referenceTo>Stock_Item__c</referenceTo>
    <relationshipLabel>Asset Cancellations</relationshipLabel>
    <relationshipName>Asset_Cancellations</relationshipName>
    <type>Lookup</type>
</CustomField>