force-app/main/default/objects/Asset_Cancellation__c/fields/Returning_Stock_Item_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Returning_Stock_Item_Serial_No__c</fullName>
    <label>Returning Stock Item Serial No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>