force-app/main/default/objects/Asset_Cancellation__c/fields/Stock_Used__c.field-meta.xml
<CustomField>
    <fullName>Stock_Used__c</fullName>
    <label>Stock Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>