force-app/main/default/objects/Asset_Cancellation__c/fields/Warehouse_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Return_Date__c</fullName>
    <label>Warehouse Return Date</label>
    <type>Date</type>
</CustomField>