force-app/main/default/objects/Asset_Cancellation__c/recordTypes/AT_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>AT_Asset_Cancellation</fullName>
    <active>true</active>
    <label>AT Asset Cancellation</label>
</RecordType>