force-app/main/default/objects/Asset_Cancellation__c/recordTypes/CD_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>CD_Asset_Cancellation</fullName>
    <active>true</active>
    <label>CD Asset Cancellation</label>
</RecordType>