force-app/main/default/objects/Asset_Cancellation__c/recordTypes/DH_AU_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_Asset_Cancellation</fullName>
    <active>true</active>
    <label>DH AU Asset Cancellation</label>
</RecordType>