force-app/main/default/objects/Asset_Cancellation__c/recordTypes/FI_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>FI_Asset_Cancellation</fullName>
    <active>true</active>
    <label>FI Asset Cancellation</label>
</RecordType>