force-app/main/default/objects/Asset_Cancellation__c/recordTypes/FP_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>FP_Asset_Cancellation</fullName>
    <active>true</active>
    <label>FP_Asset_Cancellation</label>
</RecordType>