force-app/main/default/objects/Asset_Cancellation__c/recordTypes/HU_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>HU_Asset_Cancellation</fullName>
    <active>true</active>
    <description>Hungary Asset Cancellation</description>
    <label>HU Asset Cancellation</label>
</RecordType>