force-app/main/default/objects/Asset_Cancellation__c/recordTypes/SE_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>SE_Asset_Cancellation</fullName>
    <active>true</active>
    <label>SE Asset Cancellation</label>
</RecordType>