force-app/main/default/objects/Asset_Cancellation__c/recordTypes/Talabat_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Talabat_Asset_Cancellation</fullName>
    <active>true</active>
    <label>Talabat Asset Cancellation</label>
</RecordType>