force-app/main/default/objects/Asset_Cancellation__c/recordTypes/UK_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>UK_Asset_Cancellation</fullName>
    <active>true</active>
    <label>UK Asset Cancellation</label>
</RecordType>