force-app/main/default/objects/Asset_Cancellation__c/recordTypes/Yogiyo_Asset_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_Asset_Cancellation</fullName>
    <active>true</active>
    <label>Yogiyo Asset Cancellation</label>
</RecordType>